# USBConsoleSuite

./: .clang-format  .gitignore  .launch.json  .vimspector.json  BuildRun.bat  CMakeLists.txt  README.md
USBHIDConsoleApplication/: CMakeLists.txt  README.MD
USBHIDConsoleApplication/docs/: Doxyfile
USBHIDConsoleApplication/inc/: USB-HID.h
USBHIDConsoleApplication/src/: USB-HID.cpp  main.cpp
USBHIDConsoleLibrary/: CMakeLists.txt  README.MD
USBHIDConsoleLibrary/docs/: Doxyfile
USBHIDConsoleLibrary/inc/: Support_Defines.h
USBHIDConsoleLibrary/inc/Modules/USB/: USB-HID.h  USBHIDMessage.h
USBHIDConsoleLibrary/src/Modules/USB/: USB-HID.cpp
USBHIDConsoleUnitTests/: CMakeLists.txt  README.MD
USBHIDConsoleUnitTests/docs/: Doxyfile
USBHIDConsoleUnitTests/src/: unitTests.cpp
